[gd_scene load_steps=18 format=3 uid="uid://bxlkylk5tdhqi"]

[ext_resource type="Texture2D" uid="uid://do2gon356i5vp" path="res://Textures/SillouetteWizard.png" id="1_ck41t"]
[ext_resource type="Script" path="res://Scripts/grid.gd" id="1_sakvq"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_t1k5m"]
[ext_resource type="PackedScene" uid="uid://b713dr5lk5kx8" path="res://Scenes/Tile.tscn" id="2_lpklb"]
[ext_resource type="Texture2D" uid="uid://d1fe3tbj02pbb" path="res://Textures/SillouetteGunslinger.png" id="2_vhln1"]
[ext_resource type="PackedScene" uid="uid://cbma1jhpjxi3g" path="res://Scenes/player.tscn" id="6_6rnw1"]
[ext_resource type="PackedScene" uid="uid://c8830abg8xqe1" path="res://Scenes/Player Components/component_symbol.tscn" id="7_nawn6"]
[ext_resource type="PackedScene" uid="uid://dhnwsfns7rhc0" path="res://Scenes/Player Components/component_sniper_gun.tscn" id="7_vyo1j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qfwrv"]
sky_top_color = Color(0.983959, 0.514521, 1.15514e-06, 1)
sky_horizon_color = Color(0.816486, 0.290446, 0.380007, 1)
ground_bottom_color = Color(0.71159, 0.460054, 3.85046e-07, 1)
ground_horizon_color = Color(0.816486, 0.290446, 0.380007, 1)
ground_curve = 1.57586

[sub_resource type="Sky" id="Sky_i4i7v"]
sky_material = SubResource("ProceduralSkyMaterial_qfwrv")

[sub_resource type="Environment" id="Environment_g8a3a"]
background_mode = 2
sky = SubResource("Sky_i4i7v")
sdfgi_bounce_feedback = 0.0
fog_mode = 1
fog_light_color = Color(0.991376, 0.809417, 0.841349, 1)
fog_light_energy = 0.44
fog_sun_scatter = 7.55
fog_density = 0.0485
fog_height = -2.2
fog_height_density = -0.0255
fog_depth_curve = 0.0473661
fog_depth_begin = 66.3
fog_depth_end = 629.7
volumetric_fog_density = 0.0
volumetric_fog_length = 0.7

[sub_resource type="Animation" id="Animation_ut8to"]
resource_name = "CharactersDance"
length = 0.4
loop_mode = 1
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 0.3, 1, 0.3, 1),
"update": 0,
"values": [Vector3(6.0656e-08, -0.0579987, -1.12126), Vector3(0, 0, -1.121), Vector3(6.0656e-08, -0.0579987, -1.12126), Vector3(0, 0, -1.121), Vector3(6.0656e-08, -0.0579987, -1.12126)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wizard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1, 1),
"update": 0,
"values": [Vector3(3.97364e-08, -6.63173e-14, 5.68434e-14), Vector3(0, 0, 0.174533), Vector3(3.97364e-08, -6.63173e-14, 5.68434e-14), Vector3(0, 0, -0.174533), Vector3(3.97364e-08, -6.63173e-14, 5.68434e-14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gunslinger:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(0.3, 1, 0.3, 1.1),
"update": 0,
"values": [Vector3(5.96046e-08, -1.42109e-14, 2.84217e-14), Vector3(0, 0, -0.174533), Vector3(5.96046e-08, -1.42109e-14, 2.84217e-14), Vector3(0, 0, 0.174533)]
}

[sub_resource type="Animation" id="Animation_poej0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(6.0656e-08, -0.0579987, -1.12126)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Wizard:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(3.97364e-08, -6.63173e-14, 5.68434e-14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Gunslinger:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(5.96046e-08, -1.42109e-14, 2.84217e-14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_25ans"]
_data = {
"CharactersDance": SubResource("Animation_ut8to"),
"RESET": SubResource("Animation_poej0")
}

[sub_resource type="Animation" id="Animation_akta4"]
resource_name = "NextTurn"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.6),
"transitions": PackedFloat32Array(2.82843, 0.31864, 1),
"update": 0,
"values": [Vector2(-100, 290.5), Vector2(425, 290.5), Vector2(397.5, 290.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.366667, 0.6, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_kunrw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(397.5, 290.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7q68k"]
_data = {
"NextTurn": SubResource("Animation_akta4"),
"RESET": SubResource("Animation_kunrw")
}

[node name="Game" type="Node3D"]
script = ExtResource("1_t1k5m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 8.74228e-08, 0, -7.57103e-08, -0.866025, 0.5, 4.37114e-08, 0.5, 0.866025, -3, 33, 0)
light_color = Color(0.997035, 0.813498, 1, 1)
light_angular_distance = 60.0
shadow_enabled = true
shadow_normal_bias = 10.0
shadow_opacity = 0.85
shadow_blur = 1.021

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(-1, 1.4924e-07, -6.18172e-08, 2.10847e-08, 0.5, 0.866026, 1.60154e-07, 0.866025, -0.5, 0, 66.39, -44.22)
environment = SubResource("Environment_g8a3a")
fov = 60.0
size = 17.561
near = 0.001

[node name="Characters" type="Node3D" parent="Camera3D"]
transform = Transform3D(0.1, -8.88178e-16, -8.88179e-16, 8.88178e-16, 0.1, 0, 8.88178e-16, -7.88861e-30, 0.1, 6.0656e-08, -0.0579987, -1.12126)

[node name="Wizard" type="Sprite3D" parent="Camera3D/Characters"]
transform = Transform3D(1.5, -8.52651e-14, -9.94759e-14, 8.52651e-14, 1.5, -5.96046e-08, 9.94759e-14, 5.96046e-08, 1.5, -10.2166, -1.57285, 0.908081)
texture = ExtResource("1_ck41t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Camera3D/Characters"]
libraries = {
"": SubResource("AnimationLibrary_25ans")
}
autoplay = "CharactersDance"
speed_scale = 0.25

[node name="AnimationTimer" type="Timer" parent="Camera3D/Characters"]
wait_time = 3.0
autostart = true

[node name="Gunslinger" type="Sprite3D" parent="Camera3D/Characters"]
transform = Transform3D(1, -2.84217e-14, -1.42109e-14, 2.84217e-14, 1, -5.96046e-08, 1.42109e-14, 5.96046e-08, 1, 11.3154, -1.59637, 0.92157)
texture = ExtResource("2_vhln1")

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Grid" type="Node3D" parent="."]
script = ExtResource("1_sakvq")

[node name="Row" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 23)

[node name="Tile" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 0)

[node name="Tile8" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Tile9" parent="Grid/Row" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 0)

[node name="Row2" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, 16)

[node name="Tile" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 0)

[node name="Tile8" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Tile9" parent="Grid/Row2" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 0)

[node name="Row3" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 9)

[node name="Tile" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 0)

[node name="Tile8" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Tile9" parent="Grid/Row3" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 0)

[node name="Row4" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, 2)

[node name="Tile" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 4, 0)

[node name="Tile8" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 8, 0)

[node name="Tile9" parent="Grid/Row4" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 8, 0)

[node name="Row5" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 12, -5)

[node name="Tile" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 4, 0)

[node name="Tile8" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 8, 0)

[node name="Tile9" parent="Grid/Row5" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 16, 0)

[node name="Row6" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -12)

[node name="Tile" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 4, 0)

[node name="Tile7" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 4, 0)

[node name="Tile8" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 12, 0)

[node name="Tile9" parent="Grid/Row6" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 12, 0)

[node name="Row7" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -19)

[node name="Tile" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 4, 0)

[node name="Tile7" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 4, 0)

[node name="Tile8" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 4, 0)

[node name="Tile9" parent="Grid/Row7" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 4, 0)

[node name="Row8" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8, -26)

[node name="Tile" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, -4, 0)

[node name="Tile2" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, -4, 0)

[node name="Tile3" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, -4, 0)

[node name="Tile4" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 4, 0)

[node name="Tile8" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 4, 0)

[node name="Tile9" parent="Grid/Row8" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 4, 0)

[node name="Row9" type="Node3D" parent="Grid"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -33)
visible = false

[node name="Tile" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 29, 0, 0)

[node name="Tile2" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22, 0, 0)

[node name="Tile3" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="Tile4" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8, 0, 0)

[node name="Tile5" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Tile6" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0)

[node name="Tile7" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13, 0, 0)

[node name="Tile8" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0)

[node name="Tile9" parent="Grid/Row9" instance=ExtResource("2_lpklb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 0, 0)

[node name="Players" type="Node" parent="."]

[node name="Player" parent="Players" instance=ExtResource("6_6rnw1")]

[node name="Component_Symbol" parent="Players/Player" instance=ExtResource("7_nawn6")]
max_count = 2

[node name="Player2" parent="Players" instance=ExtResource("6_6rnw1")]

[node name="Component_Symbol" parent="Players/Player2" instance=ExtResource("7_nawn6")]

[node name="Component_Sniper_Gun" parent="Players/Player2" instance=ExtResource("7_vyo1j")]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -178.5
offset_top = -33.5
offset_right = 244.5
offset_bottom = 33.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Player 1's Turn!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="VBoxContainer"]
libraries = {
"": SubResource("AnimationLibrary_7q68k")
}
autoplay = "NextTurn"

[connection signal="timeout" from="Camera3D/Characters/AnimationTimer" to="Grid" method="_on_timer_timeout"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_animation_timer_timeout"]
[connection signal="tile_clicked" from="Grid" to="." method="_on_grid_tile_clicked"]
[connection signal="out_of_resources" from="Players/Player" to="." method="_on_player_out_of_resources"]
[connection signal="out_of_resources" from="Players/Player2" to="." method="_on_player_out_of_resources"]
